# CrashHandler

./: CMakeLists.txt  README.md
CrashHandler/: CMakeLists.txt
CrashHandler/Include/: CrashHandlerAPI.h
CrashHandler/Include/CrashHandler/: CrashHandler.h  CrashHandlerDLL.h
CrashHandler/Src/: CrashHandler.cpp  CrashHandlerDLL.cpp  CrashHandlerImpl.h  CrashHandlerInternal.h  CrashHandlerWrapper.cpp
CrashHandler/Src/Platform/: CrashHandlerLinux.cpp  CrashHandlerMac.cpp  CrashHandlerWin.cpp
